5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1734_2502.log
== TEST (2019-05-10 17:29:11) 
-- CODE:
from math import *

n = int(input("Insira......."))

cont = 0
contx = 1
pi = 0.0

while(cont < n):
	
	res = res + ((1/contx*(3**cont))*((-1)**n))
	pi = sqrt(12)*res
	contx = contx + 2
	
print(pi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    res = res + ((1/contx*(3**cont))*((-1)**n))
NameError: name 'res' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:29:42) 
-- CODE:
from math import *

n = int(input("Insira......."))

cont = 0
contx = 1
pi = 0.0
res = 0.0

while(cont < n):
	
	res = res + ((1/contx*(3**cont))*((-1)**n))
	pi = sqrt(12)*res
	contx = contx + 2
	
print(pi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    res = res + ((1/contx*(3**cont))*((-1)**n))
NameError: name 'res' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:33:08) 
-- CODE:
from math import *

n = int(input("Insira......."))

cont = 0
contx = 1
pi = 0.0

while(cont < n):
	den = contx * (3**cont)
	pi = sqrt(12) * den
	contx = contx + 2
	cont = cont + 1
	
print(round(pi,8))
-- OUTPUT:
4295586.46171765
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:33:18) 
-- CODE:
from math import *

n = int(input("Insira......."))

cont = 0
contx = 1
pi = 0.0

while(cont < n):
	den = contx * (3**cont)
	pi = sqrt(12) * den
	contx = contx + 2
	cont = cont + 1
	
print(round(pi,8))
-- OUTPUT:
4295586.46171765
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:33:58) 
-- CODE:
from math import *

n = int(input("Insira......."))

cont = 0
contx = 1
pi = 0.0

while(cont < n):
	den = contx * (3**cont)
	pi = sqrt(12) * (1/den)
	contx = contx + 2
	cont = cont + 1
	
print(round(pi,8))
-- OUTPUT:
2.79e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:34:05) 
-- CODE:
from math import *

n = int(input("Insira......."))

cont = 0
contx = 1
pi = 0.0

while(cont < n):
	den = contx * (3**cont)
	pi = sqrt(12) * (1/den)
	contx = contx + 2
	cont = cont + 1
	
print(round(pi,8))
-- OUTPUT:
2.79e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:35:17) 
-- CODE:
from math import *

n = int(input("Insira......."))

cont = 0
contx = 1
pi = 0.0

while(cont < n):
	den = contx * (3**cont)
	pi = sqrt(12) * (((-1)**n)/den)
	contx = contx + 2
	cont = cont + 1
	
print(round(pi,8))
-- OUTPUT:
-2.79e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:35:31) 
-- CODE:
from math import *

n = int(input("Insira......."))

cont = 0
contx = 1
pi = 0.0

while(cont < n):
	den = contx * (3**cont)
	pi = sqrt(12) * (((-1)**n)/den)
	contx = contx + 2
	cont = cont + 1
	
print(round(pi,8))
-- OUTPUT:
-2.79e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:35:37) 
-- CODE:
from math import *

n = int(input("Insira......."))

cont = 0
contx = 1
pi = 0.0

while(cont < n):
	den = contx * (3**cont)
	pi = sqrt(12) * (((-1)**n)/den)
	contx = contx + 2
	cont = cont + 1
	
print(round(pi,8))
-- OUTPUT:
-2.79e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:36:06) 
-- CODE:
from math import *

n = int(input("Insira......."))

cont = 0
contx = 1
pi = 0.0

while(cont < n):
	den = contx * (3**cont)
	pi = sqrt(12) * (1/den)
	contx = contx + 2
	cont = cont + 1
	
print(round(pi,8))
-- OUTPUT:
2.79e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:52:16) 
-- CODE:
from math import *

n = int(input("Insira......."))

ra = sqrt(12)
cont = 1
soma = 0.0

while(cont < n):
	d = (2*cont-1) * (3**cont-1)
	soma = ra * (1/den + (-1)**(cont+1) * 1/den )
	cont = cont + 1
	
print(round(pi,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = ra * (1/den + (-1)**(cont+1) * 1/den )
NameError: name 'den' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:52:26) 
-- CODE:
from math import *

n = int(input("Insira......."))

ra = sqrt(12)
cont = 1
soma = 0.0

while(cont < n):
	d = (2*cont-1) * (3**cont-1)
	soma = ra * (1/den + (-1)**(cont+1) * 1/den )
	cont = cont + 1
	
print(round(pi,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = ra * (1/den + (-1)**(cont+1) * 1/den )
NameError: name 'den' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:53:09) 
-- CODE:
from math import *

n = int(input("Insira......."))

ra = sqrt(12)
cont = 1
soma = 0.0

while(cont < n):
	d = (2*cont-1) * (3**cont-1)
	soma = ra * (1/den + (-1)**(cont+1) * 1/den )
	cont = cont + 1
	
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = ra * (1/den + (-1)**(cont+1) * 1/den )
NameError: name 'den' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:28:55) 
-- CODE:
from math import *

n = int(input("insira os n primeiros termos"))

raiz = sqrt(12)
soma = 1/1*3**0
cont = 1

while (cont < n)
	soma = soma + (-1)**cont * (1/(cont*2+1)*3**(cont))
	cont = cont + 1
	
doze = raiz * soma
print(round(doze,8))
-- EXECUTION TIME:
0.147638
-- ERROR:
  File "/home/codebench/codes/1734/2502/main.py", line 9
    while (cont < n)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:29:42) 
-- CODE:
from math import *

n = int(input("insira os n primeiros termos"))

raiz = sqrt(12)
soma = 1/1*3**0
cont = 1

while (cont < n)
	soma = soma + (-1)**cont * ((1/(cont*2+1)*((3)**(cont))))
	cont = cont + 1
	
doze = raiz * soma
print(round(doze,8))
-- EXECUTION TIME:
0.141451
-- ERROR:
  File "/home/codebench/codes/1734/2502/main.py", line 9
    while (cont < n)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:30:56) 
-- CODE:
from math import *

n = int(input("insira os n primeiros termos"))

raiz = sqrt(12)
soma = (1/(1*3**0)
cont = 1

while (cont < n)
	soma = soma + (-1)**cont * ((1/(cont*2+1)*((3)**(cont))))
	cont = cont + 1
	
doze = raiz * soma
print(round(doze,8))
-- EXECUTION TIME:
0.205743
-- ERROR:
  File "/home/codebench/codes/1734/2502/main.py", line 7
    cont = 1
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:32:08) 
-- CODE:
from math import *

n = int(input("insira os n primeiros termos"))

raiz = sqrt(12)
soma = (1/(1*3**0)
cont = 1

while (cont < n)
	soma = soma + (-1)**cont * (1/((cont*2+1)*(3**cont))
	cont = cont + 1
doze = raiz * soma
print(round(doze,8))
-- EXECUTION TIME:
0.122486
-- ERROR:
  File "/home/codebench/codes/1734/2502/main.py", line 7
    cont = 1
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:32:13) 
-- CODE:
from math import *

n = int(input("insira os n primeiros termos"))

raiz = sqrt(12)
soma = (1/(1*3**0)
cont = 1

while (cont < n)
	soma = soma + (-1)**cont * (1/((cont*2+1)*(3**cont))
	cont = cont + 1
										 
doze = raiz * soma
print(round(doze,8))
-- EXECUTION TIME:
0.217924
-- ERROR:
  File "/home/codebench/codes/1734/2502/main.py", line 7
    cont = 1
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:33:39) 
-- CODE:
from math import *

n = int(input("insira os n primeiros termos"))

soma = (1/(1*3**0)
raiz = sqrt(12)
cont = 1

while (cont < n)
	soma = soma + (-1)**cont * (1/((cont*2+1)*3**cont))
	cont = cont + 1
										 
raiz = raiz * soma
print(round(doze,8))
-- EXECUTION TIME:
0.27294
-- ERROR:
  File "/home/codebench/codes/1734/2502/main.py", line 6
    raiz = sqrt(12)
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:34:08) 
-- CODE:
from math import *

n = int(input("insira os n primeiros termos"))

soma = (1/(1*3**0))
raiz = sqrt(12)
cont = 1

while (cont < n)
	soma = soma + (-1)**cont * (1/((cont*2+1)*3**cont))
	cont = cont + 1
										 
raiz = raiz * soma
print(round(doze,8))
-- EXECUTION TIME:
0.132915
-- ERROR:
  File "/home/codebench/codes/1734/2502/main.py", line 9
    while (cont < n)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:34:11) 
-- CODE:
from math import *

n = int(input("insira os n primeiros termos"))

soma = (1/(1*3**0))
raiz = sqrt(12)
cont = 1

while (cont < n)
	soma = soma + (-1)**cont * (1/((cont*2+1)*3**cont))
	cont = cont + 1
										 
raiz = raiz * soma
print(round(doze,8))
-- ERROR:
File "XXXX", line 9
    while (cont < n)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:34:17) 
-- CODE:
from math import *

n = int(input("insira os n primeiros termos"))

soma = (1/(1*3**0))
raiz = sqrt(12)
cont = 1

while (cont < n):
	soma = soma + (-1)**cont * (1/((cont*2+1)*3**cont))
	cont = cont + 1
										 
raiz = raiz * soma
print(round(doze,8))
-- EXECUTION TIME:
0.289106
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2502/main.py", line 14, in <module>
    print(round(doze,8))
NameError: name 'doze' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:34:34) 
-- CODE:
from math import *

n = int(input("insira os n primeiros termos"))

soma = (1/(1*3**0))
raiz = sqrt(12)
cont = 1

while (cont < n):
	soma = soma + (-1)**cont * (1/((cont*2+1)*3**cont))
	cont = cont + 1
										 
raiz = raiz * soma
print(round(doze,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(round(doze,8))
NameError: name 'doze' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:34:47) 
-- CODE:
from math import *

n = int(input("insira os n primeiros termos"))

soma = (1/(1*3**0))
raiz = sqrt(12)
cont = 1

while (cont < n):
	soma = soma + (-1)**cont * (1/((cont*2+1)*3**cont))
	cont = cont + 1
										 
raiz = raiz * soma

print(round(doze,8))
-- EXECUTION TIME:
0.17339
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2502/main.py", line 15, in <module>
    print(round(doze,8))
NameError: name 'doze' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:35:08) 
-- CODE:
from math import *

n = int(input("insira os n primeiros termos"))

soma = (1/(1*3**0))
raiz = sqrt(12)
cont = 1

while (cont < n):
	soma = soma + (-1)**cont * (1/((cont*2+1)*3**cont))
	cont = cont + 1
										 
raiz = raiz * soma

print(round(doze,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(round(doze,8))
NameError: name 'doze' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:35:32) 
-- CODE:
from math import *

n = int(input("insira os n primeiros termos"))

soma = (1/(1*3**0))
raiz = sqrt(12)
cont = 1

while (cont < n):
	soma = soma + (-1)**cont * (1/((cont*2+1)*3**cont))
	cont = cont + 1
										 
raiz = raiz * soma

print(round(raiz,8))
-- EXECUTION TIME:
0.148805
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
